data/derived/comb/progs/unify/prog3601.ml.out
Characters 83-84:
  else wwhile e b;;
              ^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'c * (('a -> 'b) * bool)
